--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -108,24 +108,26 @@
     padding: 5px 10px;
     font-style: italic; /* Adding an italic style for emphasis */
   }
-  
+/*   
   .highlighted-text::before {
     content: '';
     position: absolute;
-    bottom: 0; /* Places the background towards the bottom of the text */
+    bottom: 0;
     left: 0;
-    width: 100%;
+    width: 0%; 
     height: 50%;
-    background-color: #FFDD00; /* Yellow highlight background */
-    z-index: -1; /* Ensures the highlight stays behind the text */
-    transform: rotate(-2deg); /* Adds a subtle tilt to mimic a hand-painted stroke */
-    border-radius: 5px; /* Gives the highlight rounded corners */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15); /* Adds a shadow to the highlight */
+    background-color: #FFDD00;
+    z-index: -1;
+    transform: rotate(-2deg);
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+    transition: width 1s ease;
   }
+  
   
   .highlighted-text:hover::before {
-    transform: rotate(0deg); /* Straightens the background on hover */
-    background-color: #FFD700; /* Slightly darker yellow on hover */
-    transition: all 0.3s ease; /* Smooth hover transition */
+    transform: rotate(0deg); 
+    background-color: #FFD700; 
+    transition: all 0.3s ease; 
   }
-  
+   */
