--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -66,7 +66,7 @@
     .pastEventsGrid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 1rem;
+        gap: 7px;
     }
     .customMinimumWidth {
         /* min-width: 90%; */
